# ShadowPool

./: .env.example  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
circuits/: .gitignore  package-lock.json  package.json  shadowpool_match.circom
circuits/scripts/: compile.sh  compute_commitments.js  test_proof.sh
circuits/test/: input.json  proof.json  public.json  witness.wtns
contracts/: .gitignore  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol
contracts/src/: DarkPoolSettlement.sol  OrderBook.sol  Verifier.sol
contracts/test/: DarkPoolSettlement.t.sol  OrderBook.t.sol
docs/: index.html
myNotes/: GeneralNote.md  Part10.md  Part11.md  Part12.md  Part13.md  Part14.md  Part2.md  Part3.md  Part4.md  Part5.md  Part6.md  Part7.md  Part8.md  Part9.md
prover/: .env.example  orders.pool.json  orders.pool.json.example  package-lock.json  package.json  tsconfig.json
prover/src/: calldata.ts  commitment.ts  demo.ts  env.ts  index.ts  live.ts  matcher.ts  prover.ts  queue.ts  service-entry.ts  shims.d.ts  submitter.ts  types.ts  witness.ts
services/matcher/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
shared/: addresses.json
src/: main.tsx  vite-env.d.ts
src/app/: appSection.tsx
src/lib/: prefetchApp.ts
src/pages/: DocsCircuitPage.tsx  DocsProblemPage.tsx  LandingPage.tsx  (+5 more)
watcher/: .env.example  Cargo.toml  README.md
watcher/src/: main.rs  queue.rs  types.rs  watcher.rs
(+176 files in other folders)
